force-app/main/default/objects/Product_Staging__c/Product_Staging__c.object-meta.xml
<CustomObject>
    <description>Product staging table used for excel/csv processing</description>
    <label>Product Staging</label>
    <nameField>
        <displayFormat>PS-{00000}</displayFormat>
        <label>Product Staging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>