force-app/main/default/objects/Product_Staging__c/fields/Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Date__c</fullName>
    <description>Placement Assignment Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Assignment Date</inlineHelpText>
    <label>Assignment Date</label>
    <type>Date</type>
</CustomField>