force-app/main/default/objects/Product_Staging__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <description>body</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>body</inlineHelpText>
    <label>body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>