force-app/main/default/objects/Product_Staging__c/fields/Current_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Commission_Rate__c</fullName>
    <description>Use for Product Allocation File Processing</description>
    <label>Current Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>