force-app/main/default/objects/Product_Staging__c/fields/Current_Interest_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Balance__c</fullName>
    <description>Current Interest Balance field used for Distressed Account</description>
    <inlineHelpText>Current Interest Balance field used for Distressed Account</inlineHelpText>
    <label>Current Interest Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>