force-app/main/default/objects/Product_Staging__c/fields/Current_Principal_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Principal_Balance__c</fullName>
    <description>Current Principal Balance field used for Distressed Account</description>
    <inlineHelpText>Current Principal Balance field used for Distressed Account</inlineHelpText>
    <label>Current Principal Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>