force-app/main/default/objects/Product_Staging__c/fields/Data_Id__c.field-meta.xml
<CustomField>
    <fullName>Data_Id__c</fullName>
    <description>Data Id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data Id</inlineHelpText>
    <label>Data Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>