force-app/main/default/objects/Product_Staging__c/fields/Data_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Data_Status_Code__c</fullName>
    <description>Data Status Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Data Status Code</inlineHelpText>
    <label>Data Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>