force-app/main/default/objects/Product_Staging__c/fields/Direct_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Direct_Payment_Type__c</fullName>
    <label>Direct Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Payment</fullName>
            </value>
            <value>
                <fullName>Equipment Return Payment</fullName>
            </value>
            <value>
                <fullName>Balance adjustment due for Equipment Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>