force-app/main/default/objects/Product_Staging__c/fields/Document_Storage__c.field-meta.xml
<CustomField>
    <fullName>Document_Storage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Document Storage</description>
    <inlineHelpText>Document Storage</inlineHelpText>
    <label>Document Storage</label>
    <referenceTo>Document_Storage__c</referenceTo>
    <relationshipLabel>Product Stagings</relationshipLabel>
    <relationshipName>Product_Stagings</relationshipName>
    <type>Lookup</type>
</CustomField>