force-app/main/default/objects/Product_Staging__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External Id</inlineHelpText>
    <label>External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>