force-app/main/default/objects/Product_Staging__c/fields/Fees__c.field-meta.xml
<CustomField>
    <fullName>Fees__c</fullName>
    <description>Fees field used for Distressed Account</description>
    <inlineHelpText>Fees field used for Distressed Account</inlineHelpText>
    <label>Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>