force-app/main/default/objects/Product_Staging__c/fields/Is_Record_Process__c.field-meta.xml
<CustomField>
    <fullName>Is_Record_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Record Process</description>
    <inlineHelpText>Is Record Process</inlineHelpText>
    <label>Is Record Process</label>
    <type>Checkbox</type>
</CustomField>