force-app/main/default/objects/Product_Staging__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>