force-app/main/default/objects/Product_Staging__c/fields/Place_Id__c.field-meta.xml
<CustomField>
    <fullName>Place_Id__c</fullName>
    <description>Place Id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Place Id</inlineHelpText>
    <label>Place Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>