force-app/main/default/objects/Product_Staging__c/fields/Placed_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Placed_Commission_Rate__c</fullName>
    <description>Use for Product Allocation File Processing</description>
    <label>Placed Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>