force-app/main/default/objects/Product_Staging__c/fields/Placement_Agency__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement Agency</label>
    <length>20</length>
    <type>Text</type>
</CustomField>