force-app/main/default/objects/Product_Staging__c/fields/Placement_Agency_ID__c.field-meta.xml
<CustomField>
    <fullName>Placement_Agency_ID__c</fullName>
    <description>Salesforce ID of Placement Agency</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Salesforce ID of Placement Agency</inlineHelpText>
    <label>Placement Agency ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>