force-app/main/default/objects/Product_Staging__c/fields/Placement_Main_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Main_Status__c</fullName>
    <description>Placement Main Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Main Status</inlineHelpText>
    <label>Placement Main Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>