force-app/main/default/objects/Product_Staging__c/fields/Placement_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Placement_Status_Code__c</fullName>
    <description>Placement Status Code</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Status Code</inlineHelpText>
    <label>Placement Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>