force-app/main/default/objects/Product_Staging__c/fields/Placement_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Placement_Sub_Status__c</fullName>
    <description>Placement Sub Status</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Placement Sub Status</inlineHelpText>
    <label>Placement Sub Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>