force-app/main/default/objects/Product_Staging__c/fields/Pool_Name__c.field-meta.xml
<CustomField>
    <fullName>Pool_Name__c</fullName>
    <description>Pool Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Pool Name</inlineHelpText>
    <label>Pool Name</label>
    <length>10</length>
    <type>Text</type>
</CustomField>