force-app/main/default/objects/Product_Staging__c/fields/Pool_Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Pool_Name_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pool Name ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>