force-app/main/default/objects/Product_Staging__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <description>Product ID</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Product ID</inlineHelpText>
    <label>Product ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>