force-app/main/default/objects/Product_Staging__c/fields/Purchase_Status__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Status__c</fullName>
    <description>Purchase Status</description>
    <inlineHelpText>Purchase Status</inlineHelpText>
    <label>Buyback/Putback Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Buyback Putback Initiated</fullName>
                <label>Buyback/Putback Initiated</label>
            </value>
            <value>
                <fullName>Buyback Putback Submitted to Seller</fullName>
                <label>Buyback/Putback Submitted to Seller</label>
            </value>
            <value>
                <fullName>Buyback Putback Rejected</fullName>
                <label>Buyback/Putback Rejected</label>
            </value>
            <value>
                <fullName>Buyback Putback Approved</fullName>
                <label>Buyback/Putback Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>