force-app/main/default/objects/Product_Staging__c/fields/Putback_Buyback_Amount__c.field-meta.xml
<CustomField>
    <fullName>Putback_Buyback_Amount__c</fullName>
    <description>Using for Buyback/Putback file processing</description>
    <inlineHelpText>Using for Buyback/Putback file processing</inlineHelpText>
    <label>Buyback/Putback Amount</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>