force-app/main/default/objects/Product_Staging__c/fields/Record_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>