force-app/main/default/objects/Product_Staging__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Rejection Reason</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Rejection Reason</inlineHelpText>
    <label>Rejection Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>