force-app/main/default/objects/Product_Staging__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status</description>
    <inlineHelpText>Status</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>TestLow</fullName>
                <isActive>false</isActive>
                <label>TestLow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>