force-app/main/default/objects/Product_Staging__c/fields/Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_Date__c</fullName>
    <description>Status Changed Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Status Changed Date</inlineHelpText>
    <label>Status Changed Date</label>
    <length>25</length>
    <type>Text</type>
</CustomField>