force-app/main/default/objects/Product_Staging__c/fields/Status_Changed_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Status_Changed_Date_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Changed Date Text</label>
    <length>25</length>
    <type>Text</type>
</CustomField>