force-app/main/default/objects/Product_Staging__c/fields/Value_Tier_at_Time_of_Placement__c.field-meta.xml
<CustomField>
    <fullName>Value_Tier_at_Time_of_Placement__c</fullName>
    <description>Use for Product Allocation File Processing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Value Tier at Time of Placement</label>
    <length>20</length>
    <type>Text</type>
</CustomField>